@@ -6,6 +6,7 @@ next:
 	- *ece: fix typo which caused congestion avoidance to be applied also to QCC
 	- crypto: new requestFromAuth to set QNetworkRequest from libencloud::Auth
 	- api: id and type are really optional and have proper defaults
+	- config: autoretry and decongest can be modified via API (default false for QCC and true for *ECE)
 	- [CONNECT-201] Add OS to HTTP User-Agent
 
 libencloud 0.7.6 (28/01/2015)
